[package]
name = "ip-diagnostic-tool"
version = "0.1.1"
description = "IP诊断工具"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["dialog-save", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
surge-ping = "0.8"
local-ip-address = "0.5"
thiserror = "1.0"
tokio-util = "0.7"
futures = "0.3"

[features]
custom-protocol = ["tauri/custom-protocol"]
